--- a/platformio.ini
+++ b/platformio.ini
@@ -3,11 +3,10 @@ platform = espressif32
 framework = arduino
 board_build.mcu = esp32s3
 board = esp32-s3-devkitc-1
+test_build_project_src = yes
 
 [env:atoms3]
 platform = espressif32
 board = m5stack-atoms3
 framework = arduino
-
-lib_deps =
-         ${PROJECT_DIR}
+test_build_project_src = yes
