--- a/platformio.ini
+++ b/platformio.ini
@@ -1,12 +1,19 @@
-[env:esp32s3]
+[env]
 platform = espressif32
 framework = arduino
-board_build.mcu = esp32s3
-board = esp32-s3-devkitc-1
 test_build_project_src = yes
 
+[env:esp32s3]
+board = esp32-s3-devkitc-1
+board_build.mcu = esp32s3
+build_flags =
+    -D EN_PIN=-1
+    -D RX_PIN=18
+    -D TX_PIN=17
+
 [env:atoms3]
-platform = espressif32
 board = m5stack-atoms3
-framework = arduino
-test_build_project_src = yes
+build_flags =
+    -D EN_PIN=6
+    -D RX_PIN=5
+    -D TX_PIN=38
