--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,14 @@
 [env]
-platform = espressif32
 framework = arduino
 test_build_project_src = yes
+monitor_speed = 115200
+
+[env:nano_every]
+platform = atmelmegaavr
+board = nano_every
 
 [env:esp32s3]
+platform = espressif32
 board = esp32-s3-devkitc-1
 board_build.mcu = esp32s3
 build_flags =
@@ -12,6 +17,7 @@ build_flags =
     -D TX_PIN=17
 
 [env:atoms3]
+platform = espressif32
 board = m5stack-atoms3
 build_flags =
     -D EN_PIN=6
