--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,14 @@ build_flags =
     -D EN_PIN=6
     -D RX_PIN=5
     -D TX_PIN=38
+
+
+[env:example_read_hz_atoms3]
+platform = espressif32
+board = m5stack-atoms3
+build_src_filter = +<../examples/read_hz.cpp> +<*.cpp>
+
+[env:example_read_hz_nano_every]
+platform = atmelmegaavr
+board = nano_every
+build_src_filter = +<../examples/read_hz.cpp> +<*.cpp>
