Add rotate sample

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,3 +46,26 @@ build_flags =
 platform = atmelmegaavr
 board = nano_every
 build_src_filter = +<../examples/read_hz.cpp> +<*.cpp>
+
+[env:example_rotate_esp32s3]
+platform = espressif32
+board = esp32-s3-devkitc-1
+build_src_filter = +<../examples/rotate.cpp> +<*.cpp>
+build_flags =
+    -D EN_PIN=-1
+    -D RX_PIN=18
+    -D TX_PIN=17
+
+[env:example_rotate_atoms3]
+platform = espressif32
+board = m5stack-atoms3
+build_src_filter = +<../examples/rotate.cpp> +<*.cpp>
+build_flags =
+    -D EN_PIN=6
+    -D RX_PIN=5
+    -D TX_PIN=38
+
+[env:example_rotate_nano_every]
+platform = atmelmegaavr
+board = nano_every
+build_src_filter = +<../examples/rotate.cpp> +<*.cpp>
