Add variance and mean

--- a/platformio.ini
+++ b/platformio.ini
@@ -78,6 +78,8 @@ build_flags =
     -D EN_PIN=6
     -D RX_PIN=5
     -D TX_PIN=38
+lib_deps =
+    https://github.com/fredlarochelle/RunningStats
 
 [env:example_read_angle_esp32s3]
 platform = espressif32
@@ -87,3 +89,5 @@ build_flags =
     -D EN_PIN=-1
     -D RX_PIN=18
     -D TX_PIN=17
+lib_deps =
+    https://github.com/fredlarochelle/RunningStats
