Add readable setting value function for current and temperature

--- a/platformio.ini
+++ b/platformio.ini
@@ -91,3 +91,12 @@ build_flags =
     -D TX_PIN=17
 lib_deps =
     https://github.com/fredlarochelle/RunningStats
+
+[env:example_read_parameters_atoms3]
+platform = espressif32
+board = m5stack-atoms3
+build_src_filter = +<../examples/read_parameters.cpp> +<*.cpp>
+build_flags =
+    -D EN_PIN=6
+    -D RX_PIN=5
+    -D TX_PIN=38
