Add mutex helper to lock and unlock ics communication

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,5 +31,7 @@ jobs:
       - name: Install PlatformIO Core
         run: pip install --upgrade platformio
 
+      - name: Build PlatformIO Project
+        run: pio run
       - name: Build and Test PlatformIO Project
         run: pio test -e atoms3 -vvv
