--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,7 @@
+[platformio]
+src_dir = src
+default_envs = example_read_hz_esp32s3, example_read_hz_atoms3, example_read_hz_nano_every,  example_rotate_esp32s3, example_rotate_atoms3, example_rotate_nano_every, example_read_angle_esp32s3, example_read_angle_atoms3, example_read_parameters_atoms3
+
 [env]
 framework = arduino
 test_build_project_src = yes
